
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
__attribute__((used)) static unsigned
hmin(unsigned ha, unsigned hb)
{

 return (ha < hb ? ha : hb);
}
